[project]
name = "fam"
version = "0.1.0"
description = "Foundational model for text to speech"
authors = []
readme = "README.md"

dependencies = [
  "torch>=2.3",
  "torchaudio",
  "vocos",
  "librosa",
  "tqdm",
  "tiktoken",
  "numpy",
  "ninja",
  "fastapi",
  "uvicorn",
  "tyro",
  "deepfilternet",
  "pydub",
  "gradio",
  "huggingface_hub",
  "click",
  "python-dotenv",
  "julius",
]

[project.optional-dependencies]
dev = ["pre-commit>=3.7.0", "pytest>=8.0.2", "ipdb>=0.13.13", "wandb>=0.12.4"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
